# qt_course

./: README.md
qt_demo/1_qt_pro_template/: CMakeLists.txt  readme.txt
qt_demo/1_qt_pro_template/app/: CMakeLists.txt
qt_demo/1_qt_pro_template/core/: CMakeLists.txt  widget.cpp
qt_demo/1_qt_pro_template/ui/: CMakeLists.txt
qt_demo/2_signal_and_slot/: widget.cpp  widget.h  widget.ui
qt_demo/3_notebook/notebook/notebook/: widget.cpp  widget.ui
